<resources>
    <string name="app_name">Wild Swap</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="google_maps_key">AIzaSyAcdnOoy0diO5vmcwdTtpzsMkx2iQeeBvs</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">Here at Wild Swap we love exploring the great outdoors and preserving nature for the future generations.</string>
    <string name="slide_2_title">Plot Locations!</string>
    <string name="slide_2_desc">Add wild locations that you discover to our map interface.</string>
    <string name="slide_3_title">Trade Locations!</string>
    <string name="slide_3_desc">Request to trade locations added by other users for one of your own.</string>
    <string name="slide_4_title">Build Communities!</string>
    <string name="slide_4_desc">Build a community around the locations that you all love to visit.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="map_showcase_1">You can add a wild location making it available for trading by pressing this button.</string>
    <string name="map_showcase_2">Click on the blue circles to initiate a trade.</string>
    <string name="map_showcase_3">Other screens can be accessed via this menu.</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="signout_button">Sign Out</string>
    <string-array name="nav_drawer_items">
        <item >Map</item>
        <item >Your Sites</item>
        <item >Known Sites</item>
        <item >Open Trades</item>
        <item >Settings</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings2">Settings</string>
    <string name="title_activity_my">Details</string>
    <string name="action_search">Search</string>
    <string name="titleDefault">Cool wild location</string>
    <string name="descriptionDefault">It is really cool here&#8230;</string>
    <string name="feature1">Car Access</string>
    <string name="feature2">Walk Required</string>
    <string name="feature3">Water Source</string>
    <string name="feature4">Grassy Terrain</string>
    <string name="feature5">Rocky Terrain</string>
    <string name="feature6">Sandy Terrain</string>
    <string name="feature7">Fishing Permit</string>
    <string name="feature8">Pub Nearby</string>
    <string name="feature9">Shop Nearby</string>
    <string name="feature10">Grazing Animals</string>
    <string name="feature11">Playing Field</string>
    <string name="distantTerrain">Let\'s start by selecting the distant terrain.</string>
    <string name="nearbyTerrain">Now select an option that best describes the terrain nearby.</string>
    <string name="immediateTerrain">Finally select the most accurate immediate terrain.</string>
    <string name="amateurClassification">An Amateur location is generally accessible by car or very easily on foot, supplies such as food and fuel can be purchased nearby.</string>
    <string name="casualClassification">A Casual location is off the beaten track and will require a short hike or drive into the wilderness, no nearby amenities.</string>
    <string name="expertClassification">An Expert location requires some serious navigational skills, do not expect to see another soul at this location and make sure to bring enough food and toilet roll.</string>
    <string name="distantFeature1">Hills</string>
    <string name="distantFeature2">Forest</string>
    <string name="distantFeature3">Plains</string>
    <string name="distantFeature4">Loch</string>
    <string name="distantFeature5">Mountains</string>
    <string name="distantFeature6">Valley</string>
    <string name="distantFeature7">Ocean</string>
    <string name="distantFeature8"></string>
    <string name="distantFeature9"></string>
    <string name="nearbyFeature1">Hills</string>
    <string name="nearbyFeature2">Forest</string>
    <string name="nearbyFeature3">Plains</string>
    <string name="nearbyFeature4">Loch</string>
    <string name="nearbyFeature5">Beach</string>
    <string name="nearbyFeature6">Cliff</string>
    <string name="nearbyFeature7"></string>
    <string name="nearbyFeature8"></string>
    <string name="nearbyFeature9"></string>
    <string name="immediateFeature1">Grass</string>
    <string name="immediateFeature2">Pebbles</string>
    <string name="immediateFeature3">Sand</string>
    <string name="immediateFeature4"></string>
    <string name="immediateFeature5"></string>
    <string name="immediateFeature6"></string>
    <string name="immediateFeature7"></string>
    <string name="immediateFeature8"></string>
    <string name="immediateFeature9"></string>
    <string name="question1">What is the maximum amount of time that should be spent in one location?</string>
    <string name="question2">I am the kind of wild camper that&#8230;</string>
    <string name="question3">The best way to dispose of human waste is&#8230;</string>
    <string name="question4">Deadwood should be&#8230;</string>
    <string name="question5">It is acceptable to leave food scraps as&#8230;</string>
    <string name="question6">I am the kind of wild camper who&#8230;</string>
    <string name="question7">It is acceptable to move boulders so long as&#8230;</string>
    <string name="question8">It is acceptable to move boulders so long as&#8230;</string>
    <string name="question9">It is acceptable to move boulders so long as&#8230;</string>
    <string name="question1_answer1">1 night</string>
    <string name="question1_answer2">2 or 3 nights</string>
    <string name="question1_answer3">3 to 5 nights</string>
    <string name="question1_answer4">There is no maximum</string>
    <string name="question2_answer1">Leaves no trace</string>
    <string name="question2_answer2">Leaves some trace</string>
    <string name="question2_answer3">Leaves a lot of trace</string>
    <string name="question2_answer4">Leaves as much trace as possible</string>
    <string name="question3_answer1">in a stream, river or loch.</string>
    <string name="question3_answer2">on the ground and cover with tissue paper.</string>
    <string name="question3_answer3">carry out in biodegradable bag.</string>
    <string name="question3_answer4">bury underground.</string>
    <string name="question4_answer1">burned on a camp-fire, it is free fuel.</string>
    <string name="question4_answer2">taken with you, it is free wood.</string>
    <string name="question4_answer3">left alone, it is an important habitat for insects.</string>
    <string name="question4_answer4">moved out of the way so no one can trip over it.</string>
    <string name="question5_answer1">birds will eat them.</string>
    <string name="question5_answer2">they will degrade naturally over time.</string>
    <string name="question5_answer3">it is not acceptable to leave food scraps, but fruit peelings are OK.</string>
    <string name="question5_answer4">it is not acceptable to leave any food scraps.</string>
    <string name="question6_answer1">removes all of my own litter.</string>
    <string name="question6_answer2">leaves some litter for next person.</string>
    <string name="question6_answer3">leaves some litter for the animals.</string>
    <string name="question6_answer4">removes all of my own and others\' litter.</string>
    <string name="question7_answer1">it is not covered in moss.</string>
    <string name="question7_answer2">you move it back to where you found it.</string>
    <string name="question7_answer3">it won\'t roll away.</string>
    <string name="question7_answer4">there are lots of boulders.</string>
    <string name="question8_answer1">it is not covered in moss.</string>
    <string name="question8_answer2">you move it back to where you found it.</string>
    <string name="question8_answer3">it won\'t roll away.</string>
    <string name="question8_answer4">there are lots of boulders.</string>
    <string name="question9_answer1">it is not covered in moss.</string>
    <string name="question9_answer2">you move it back to where you found it.</string>
    <string name="question9_answer3">it won\'t roll away.</string>
    <string name="question9_answer4">there are lots of boulders.</string>
    <string name="userType1">Beginner</string>
    <string name="userType2">Casual</string>
    <string name="userType3">Explorer</string>
    <string name="userTypeDescription1">You may have never been Wild Camping before but you like the sound of it and wish to give it a try.</string>
    <string name="userTypeDescription2">You have been Wild Camping a number of times and enjoy it very much, but only if the weather is fair.</string>
    <string name="userTypeDescription3">You live for Wild Camping, through rain, sleet and snow.</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="profile_numSites">Number of Owned Sites</string>
    <string name="profile_numTrades">Number of Completed Trades</string>
    <string name="rejected">- Rejected</string>
    <string name="accepted">- Accepted</string>
    <string name="pending">- Pending</string>
    <string name="quizText">Complete this short quiz to help other users gain an impression of the kind of wild camper you are. All of the questions relate to the Scottish Outdoor Access Code.</string>
    <string name="welcomeText">Before you are let loose you will need to build a profile. Your profile will be viewed by other users that may wish to trade with you.\n

    Do not feel obliged to use your real identity, the purpose of having a profile is for other users to get an idea about the type of person you are, not who you are.</string>
    <string name="badge_title_1">Early Adopter</string>
    <string name="badge_title_2">Base Camp</string>
    <string name="badge_title_3">Happy Camper</string>
    <string name="badge_title_4">Band Camp</string>
    <string name="badge_title_5">Hideout</string>
    <string name="badge_title_6">Wise Guy</string>
    <string name="badge_title_7">Green Dealer</string>
    <string name="badge_title_8">Merchant</string>
    <string name="badge_title_9">Mock Broker</string>
    <string name="badge_title_10">Tribute</string>
    <string name="badge_title_11">Charity Worker</string>
    <string name="badge_title_12">Saint Nick</string>
    <string name="badge_title_13">Selfless</string>
    <string name="badge_title_14">Rookie</string>
    <string name="badge_title_15">Hall Monitor</string>
    <string name="badge_title_16">Moderator</string>
    <string name="badge_title_17">Park Ranger</string>
    <string name="badge_title_18">1000 Words</string>
    <string name="badge_title_19">Trip Advisor</string>
    <string name="badge_title_20">Contributor</string>
    <string name="badge_title_21">2nd Opinion</string>
    <string name="badge_title_22">Vacationer</string>
    <string name="badge_title_23">Explorer</string>
    <string name="badge_title_24">Globe Trotter</string>
    <string name="badge_title_25">Nomad</string>
    <string name="badge_desc_1">Joined Wild Swap in its first year of release</string>
    <string name="badge_desc_2">Added 1 location</string>
    <string name="badge_desc_3">Added 2 locations</string>
    <string name="badge_desc_4">Added 5 locations</string>
    <string name="badge_desc_5">Added 10 locations</string>
    <string name="badge_desc_6">Completed 1 successful trade</string>
</resources>